--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,6 +31,8 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:hint="Username"
+                android:maxLines="1"
+                android:lines="1"
                 android:background="@android:color/transparent"/>
             <View
                 android:layout_width="match_parent"
@@ -76,19 +78,65 @@
         </RelativeLayout>
     </LinearLayout>
     <Button
+        android:id="@+id/loginButton"
         app:layout_widthPercent="84.4%"
         app:layout_heightPercent="7.2%"
         app:layout_marginTopPercent="55.9%"
         android:layout_centerHorizontal="true"
+        android:text="Login"
         android:textColor="@android:color/white"
         android:background="@color/mainOrangeColor"/>
     <LinearLayout
         app:layout_widthPercent="84.4%"
         app:layout_heightPercent="6%"
+        android:layout_below="@id/loginButton"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:orientation="horizontal">
-
+        <ImageButton
+            android:id="@+id/checkBox"
+            android:layout_width="15dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_check_off"
+            android:background="@android:color/transparent"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="5dp"
+            android:text="Remember me"
+            android:textColor="@android:color/black"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Forgot password?"
+            android:textAllCaps="false"
+            android:textColor="@color/mainOrangeColor"
+            android:background="@android:color/transparent"/>
     </LinearLayout>
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        app:layout_heightPercent="9.1%"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/white">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Don't have an account?"
+                android:textColor="@android:color/black"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="Learn more."
+                android:textAllCaps="false"
+                android:textColor="@color/mainOrangeColor"
+                android:background="@android:color/transparent"/>
+        </LinearLayout>
+    </RelativeLayout>
 </android.support.percent.PercentRelativeLayout>
