--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -90,14 +90,14 @@
         app:layout_widthPercent="84.4%"
         app:layout_heightPercent="6%"
         android:layout_below="@id/loginButton"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_centerHorizontal="true"
         android:orientation="horizontal">
         <ImageButton
             android:id="@+id/checkBox"
             android:layout_width="15dp"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_check_off"
+            android:src="@drawable/ic_check_on"
             android:background="@android:color/transparent"/>
         <TextView
             android:layout_width="0dp"
@@ -112,13 +112,15 @@
             android:text="Forgot password?"
             android:textAllCaps="false"
             android:textColor="@color/mainOrangeColor"
-            android:background="@android:color/transparent"/>
+            android:background="@android:color/transparent"
+            android:visibility="invisible"/>
     </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         app:layout_heightPercent="9.1%"
         android:layout_alignParentBottom="true"
-        android:background="@android:color/white">
+        android:background="@android:color/white"
+        android:visibility="invisible">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
